Inventory and balance reports implemented. TODO: Javadocs